# lamb

./: .gitignore  main.py  pyproject.toml
.log/bench-dual-2026-03-20_13-44-20/: bench.json
.log/bench-gpt-5-mini-dual-2026-03-22_08-14-59/: bench.json
example/: article_summary_dual.json  article_summary_fides.json  article_summary_lamb.json  meeting_dual.json  meeting_fides.json  meeting_forward_attack_lamb.json  meeting_forward_defense_lamb.json  meeting_forward_no_attack_lamb.json  meeting_lamb.json  meeting_note_dual_attack.json  meeting_note_lamb_attack.json  meeting_single.json  pr_dual.json  pr_fides.json  pr_lamb.json  pr_lamb_attack.json  repo_init.json  repo_init_attack.json  repo_init_dual_defense.json  repo_init_fides.json  user_task_0.json  user_task_0_attack.json  user_task_0_dual_defense.json  user_task_0_lamb.json
lamb/: agent.py  bench.py  controller.py  formatter.py  ifc.py  labels.py  llm.py  llm_wrapper.py  logging.py  openai_llm.py  prompting_llm.py  prompts.py  query_llm.py  runtime.py  tool_categories.py  tool_exec.py  tool_execution.py  tool_llm.py  tool_result.py  tools.py  types.py
lamb/cores/: dual_ifc.py  lamb_dynamic_ifc.py  (+2 more)
scripts/: data-scraping.ps1  error_metrics.py  install-model.sh  start-container.sh
tests/: test_agent.py  test_coding.py  test_presentation.py
traces/: article-dual.trace  article-lamb.trace  article-summary-dual.trace  article-summary-fides.trace  article-summary-lamb.trace  meeting-notes-attack-dual.trace  meeting-notes-attack-lamb.trace  meeting-notes-no-attack-dual.trace  meeting-notes-no-attack-lamb.trace  pr-attack-lamb.trace  pr-dual.trace  pr-fides.trace  pr-lamb.trace
(+10843 files in other folders)
