[project]
name = "lamb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    "agentdojo>=0.1.35",
    "ollama>=0.6.1",
    "openai>=2.15.0",
    "ruff>=0.14.13",
    "ty>=0.0.12",
]
[tool.pyright]
venvPath = "."
venv = ".venv"
