[project]
name = "lamb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    "agentdojo>=0.1.35",
    "google-genai>=1.59.0",
    "jsonschema>=4.26.0",
    "ollama>=0.6.1",
    "openai>=2.15.0",
    "ruff>=0.14.13",
    "ty>=0.0.12",
]
[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN401",  # no any
    "COM812",  # conflicting
    "D100",    # public module doc
    "D101",    # public class doc
    "D102",    # public method doc
    "D103",    # public function doc
    "D107",    # init doc
    "D202",    # conflicting
    "D205",    # one line summary
    "D213",    # conflicting
    "EM101",   # exceptions str literal
    "EM102",   # exceptions outside class
    "ERA001",  # commented code
    "FIX002",  # fix TODO
    "G004",    # f-string in log
    "LOG015",  # root logger
    "ISC003",  # no explicit str concat
    "S101",    # no assert
    "TD003",   # commented code
    "T201",    # commented code
    "TD001",   # TODO author
    "TD002",   # TODO link
    "TRY003",  # long exception messages
    "PLR2004", # magic numbers
    "PT018",   # multi-part assertion
]
